Add DB Connecticity

--- a/API/JobTracking.Application/JobTracking.Application.csproj
+++ b/API/JobTracking.Application/JobTracking.Application.csproj
@@ -18,4 +18,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JobTracking.DataAccess\JobTracking.DataAccess.csproj" />
+    <ProjectReference Include="..\JobTracking.Domain\JobTracking.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
