--- a/API/JobTracking.API/JobTracking.API.csproj
+++ b/API/JobTracking.API/JobTracking.API.csproj
@@ -19,4 +19,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JobTracking.Application\JobTracking.Application.csproj" />
+    <ProjectReference Include="..\JobTracking.DataAccess\JobTracking.DataAccess.csproj" />
+    <ProjectReference Include="..\JobTracking.Domain\JobTracking.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
