--- a/API/JobTracking.API/appsettings.json
+++ b/API/JobTracking.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyJobAppDb;Trusted_Connection=True;"
+  }
 }
