--- a/API/JobTracking.API/appsettings.json
+++ b/API/JobTracking.API/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyJobAppDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MyJobAppDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
