Add 'working' register form

--- a/API/JobTracking.DataAccess/JobTracking.DataAccess.csproj
+++ b/API/JobTracking.DataAccess/JobTracking.DataAccess.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\JobTracking.Domain\JobTracking.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
